# awesome-distributed-systems

./: README.md
gfs/: .gitignore  Cargo.toml  README.md
gfs/chunk_server/: Cargo.toml
gfs/chunk_server/src/: buffer.rs  chunk_file_manager.rs  chunk_server_impl.rs  lease_manager.rs  main.rs
gfs/cli/: Cargo.toml
gfs/cli/src/: main.rs
gfs/client/: Cargo.toml
gfs/client/src/: cache_manager.rs  lib.rs
gfs/common/: Cargo.toml
gfs/common/src/: concurrent_hash_map.rs  conn.rs  lib.rs  utils.rs
gfs/master_server/: Cargo.toml
gfs/master_server/src/: heartbeat.rs  main.rs  master_server_impl.rs  metdata_manager.rs
gfs/master_server/src/chunk_server_manager/: chunk_server_manager_impl.rs  error.rs  mod.rs  server_priority.rs
gfs/proto/: Cargo.toml  build.rs
gfs/proto/protobuf/: metadata.proto
gfs/proto/protobuf/common/: chunk_server.proto  empty.proto
gfs/proto/protobuf/grpc/: chunk_server_service.proto  master_server_service.proto
gfs/proto/src/: lib.rs
mapreduce/: .gitignore  Cargo.toml  build.rs
mapreduce/src/: coordinator.rs  kv.rs  lib.rs  main.rs  mapreduce_seq.rs  state.rs  utils.rs  worker.rs
mapreduce/src/proto/: mapreduce.capnp  mod.rs  rust.capnp
mapreduce/test_utils/: Cargo.toml
mapreduce/test_utils/src/: lib.rs
mapreduce/tests/: word_count.rs
