[package]
name = "mapreduce"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.17.2"
capnp-futures = "0.17.0"
capnp-rpc = "0.17.0"
futures = "0.3.28"
tokio = { version = "1.30.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["compat"] }

[build-dependencies]
capnpc = "0.17.2"
glob = "0.3.1"

[dev-dependencies]
test_utils = { path = "test_utils" }

[lib]
name = "mapreduce"
path = "src/lib.rs"
