[package]
name = "chunk_server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "rt"] }
proto = { path = "../proto" }
tonic = "0.10"
clap = { version = "4.4.6", features = ["derive"] }
url = "2.4.1"
thiserror = "1.0.50"
anyhow = { version = "1.0.75", features = ["backtrace"] }
env_logger = "0.10.0"
log = "0.4.20"
